--- a/.github/workflows/mater-teams-ping.yml
+++ b/.github/workflows/mater-teams-ping.yml
@@ -26,6 +26,12 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+        
+      - name: Display Github event variable "github.event.commits[0].message"
+        run: echo "last commit message = ${{ github.event.commits[0].message }}" 
+        
+      - name: Display Github event variable "github.event.commits[0].author.name"
+        run: echo "last commit author = ${{ github.event.commits[0].author.name }}" 
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
