--- a/.github/workflows/mater-teams-ping.yml
+++ b/.github/workflows/mater-teams-ping.yml
@@ -38,5 +38,6 @@ jobs:
         run: |
           $teamsURL = "https://prod-17.eastus.logic.azure.com:443/workflows/736eed9388ff451eb193197089ddd28b/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=Psvl8Z41gQxVk4DS1wqlCKjYN4noj-4g_ZYAG8mSIrY"
           $postParams = @{author= '${{ github.event.commits[0].author.name }}' ; message= '${{ github.event.commits[0].message }}' }
+          echo $postParams
           Invoke-WebRequest -Uri $teamsURL -Method POST -Body $postParams
 
